[package]
authors = ["Alex G Rice <alex@ricegeo.dev>"]
description = "Generate GeoJSON FeatureCollection with random Point Features."
documentation = "https://docs.rs/random-geojson-points"
edition = "2018"
homepage = "https://github.com/guidorice/random-geojson-points"
license = "MIT"
name = "random-geojson-points"
readme = "README.md"
repository = "https://github.com/guidorice/random-geojson-points"
version = "0.1.2"

[dependencies]
geojson = "0.16"
rand = "0.7"